@@ -134,14 +134,12 @@ extern "C"
   extern void *gsasl_application_data_get (Gsasl_ctx * ctx);
 
 /* Mechanism handling: listmech.c, supportp.c, suggest.c */
-  extern int gsasl_client_listmech (Gsasl_ctx * ctx, char *out,
-				    size_t * outlen);
+  extern int gsasl_client_mechlist (Gsasl_ctx * ctx, char **out);
   extern int gsasl_client_support_p (Gsasl_ctx * ctx, const char *name);
   extern const char *gsasl_client_suggest_mechanism (Gsasl_ctx * ctx,
 						     const char *mechlist);
 
-  extern int gsasl_server_listmech (Gsasl_ctx * ctx, char *out,
-				    size_t * outlen);
+  extern int gsasl_server_mechlist (Gsasl_ctx * ctx, char **out);
   extern int gsasl_server_support_p (Gsasl_ctx * ctx, const char *name);
   extern const char *gsasl_server_suggest_mechanism (Gsasl_ctx * ctx,
 						     const char *mechlist);
@@ -408,6 +406,12 @@ extern "C"
 						 cb);
   extern Gsasl_server_callback_service
     gsasl_server_callback_service_get (Gsasl_ctx * ctx);
+
+  /* Obsolete functions. */
+  extern int gsasl_client_listmech (Gsasl_ctx * ctx, char *out,
+				    size_t * outlen);
+  extern int gsasl_server_listmech (Gsasl_ctx * ctx, char *out,
+				    size_t * outlen);
 
 #ifdef __cplusplus
 }
